--- a/pom.xml
+++ b/pom.xml
@@ -48,9 +48,9 @@
 
     <properties>
         <java.version>1.7</java.version>
-        <logback.version>1.2.0</logback.version>
-        <junit.version>4.13.1</junit.version>
-        <jackson-databind.version>2.10.0.pr1</jackson-databind.version>
+        <logback.version>1.2.7</logback.version>
+        <junit.version>4.13.2</junit.version>
+        <jackson-databind.version>2.12.5</jackson-databind.version>
         <BUILD_NUMBER>1</BUILD_NUMBER>
     </properties>
 
