--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.github.maricn</groupId>
     <artifactId>logback-slack-appender</artifactId>
-    <version>1.6.1</version>
+    <version>1.7.0-SNAPSHOT</version>
 
     <licenses>
         <license>
